# cadence

./: README.md  pyproject.toml
cadence/: cli.py  config.py  default_config.toml
cadence/commands/: __init__.py  application.py  company.py  interview.py  job_description.py  message.py  next_cmd.py  offer.py  person.py  reference.py  stats.py  validate.py
cadence/models/: __init__.py  application.py  base.py  company.py  job_description.py  message.py  offer.py  person.py  reference_contact.py  take_home.py
cadence/storage/: __init__.py  store.py
cadence/utils/: cli.py
tests/: test_core.py
